--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -6,8 +6,8 @@
     <!-- P A R E N T P R O J E C T D E S C R I P T I O N -->
     <!-- ====================================================================== -->
     <parent>
-        <groupId>acs-aem-checkin</groupId>
-        <artifactId>acs-aem-checkin</artifactId>
+        <groupId>gdc-checkin</groupId>
+        <artifactId>gdc-checkin</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -15,9 +15,9 @@
     <!-- P R O J E C T D E S C R I P T I O N -->
     <!-- ====================================================================== -->
 
-    <artifactId>acs-aem-checkin-bundle</artifactId>
+    <artifactId>gdc-checkin-bundle</artifactId>
     <packaging>bundle</packaging>
-    <name>ACS AEM Checkin - Reactor Project Bundle</name>
+    <name>GDC Checkin - Reactor Project Bundle</name>
 
     <dependencies>
         <dependency>
