--- a/content/pom.xml
+++ b/content/pom.xml
@@ -6,8 +6,8 @@
     <!-- P A R E N T P R O J E C T D E S C R I P T I O N -->
     <!-- ====================================================================== -->
     <parent>
-        <groupId>acs-aem-checkin</groupId>
-        <artifactId>acs-aem-checkin</artifactId>
+        <groupId>gdc-checkin</groupId>
+        <artifactId>gdc-checkin</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -15,14 +15,14 @@
     <!-- P R O J E C T D E S C R I P T I O N -->
     <!-- ====================================================================== -->
 
-    <artifactId>acs-aem-checkin-content</artifactId>
+    <artifactId>gdc-checkin-content</artifactId>
     <packaging>content-package</packaging>
-    <name>ACS AEM Checkin - Reactor Project Package</name>
+    <name>GDC Checkin - Reactor Project Package</name>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>acs-aem-checkin-bundle</artifactId>
+            <artifactId>gdc-checkin-bundle</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
