--- a/content/pom.xml
+++ b/content/pom.xml
@@ -57,8 +57,8 @@
                     <embeddeds>
                         <embedded>
                             <groupId>${project.groupId}</groupId>
-                            <artifactId>acs-aem-checkin-bundle</artifactId>
-                            <target>/apps/acs-aem-checkin/install</target>
+                            <artifactId>gdc-checkin-bundle</artifactId>
+                            <target>/apps/gdc-checkin/install</target>
                         </embedded>
                     </embeddeds>
                     <targetURL>http://${crx.host}:${crx.port}/crx/packmgr/service.jsp</targetURL>
