--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -84,6 +84,20 @@
 			<groupId>com.day.cq</groupId>
 			<artifactId>cq-commons</artifactId>
 		</dependency>
+
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.10-FINAL</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
     <!-- ====================================================================== -->
