--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,19 @@
 				<version>5.6.4</version>
 				<scope>provided</scope>
 			</dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.10-FINAL</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.9</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
