updated login URI

--- a/content/src/main/content/jcr_root/apps/gdc-checkin/config/com.day.cq.auth.impl.LoginSelectorHandler.config
+++ b/content/src/main/content/jcr_root/apps/gdc-checkin/config/com.day.cq.auth.impl.LoginSelectorHandler.config
@@ -1,4 +1,4 @@
 service.ranking=I"5000"
 auth.loginselector.handle=["html","htm",""]
-auth.loginselector.defaultloginpage="/content/gdc-bdo/en/login-page.html"
+auth.loginselector.defaultloginpage="/login-page.html"
 path="/"
