--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,13 @@
                 <version>3.9</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.day.cq</groupId>
+                <artifactId>cq-search</artifactId>
+                <version>5.6.4</version>
+                <scope>provided</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
